--- a/thesis.bib
+++ b/thesis.bib
@@ -2616,3 +2616,28 @@ for Global Competitiveness},
   year={2016},
   publisher={Taylor \& Francis}
 }
+@article{Solanki_2020,
+	doi = {10.1021/acs.jpcc.9b11196},
+	url = {https://doi.org/10.1021%2Facs.jpcc.9b11196},
+	year = 2020,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {124},
+	number = {8},
+	pages = {4582--4594},
+	author = {Viral A. Solanki and Bhaskarjyoti Borah},
+	title = {High-Throughput Computational Screening of 12,351 Real Metal{\textendash}Organic Framework Structures for Separation of Hexane Isomers: A Quest for a Yet Better Adsorbent},
+	journal = {J. Phys. Chem. C}
+}
+@article{Zhang_2022,
+	doi = {10.1016/j.seppur.2022.120932},
+	url = {https://doi.org/10.1016%2Fj.seppur.2022.120932},
+	year = 2022,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	volume = {291},
+	pages = {120932},
+	author = {Chenghui Zhang and Xinglong Dong and Yongwei Chen and Houxiao Wu and Liang Yu and Kang Zhou and Ying Wu and Qibin Xia and Hao Wang and Yu Han and Jing Li},
+	title = {Balancing uptake and selectivity in a copper-based metal{\textendash}organic framework for xenon and krypton separation},
+	journal = {Separation and Purification Technology}
+}
